chore(test): bookIT tests all filters